// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`App renders snapshot on data 1`] = `
<div>
  Pending
</div>
`;

exports[`App renders snapshot on data 2`] = `
<div
  className="sc-bdVaJa iZVVIW"
>
  <div>
    <div
      className="sc-bdVaJa gUbkqd"
    >
      <pre>
        {
          "data": {
            "title": "Portfolio",
            "subtitle": "of Henry Ford",
            "mail": "henry [dot] ford [at] example [dot] com"
          }
        }
      </pre>
    </div>
  </div>
</div>
`;

exports[`App renders snapshot on error 1`] = `
<div>
  Pending
</div>
`;

exports[`App renders snapshot on error 2`] = `
<div>
  <strong>
    error
  </strong>
</div>
`;
